# toggl-tracker

./: README.md  main.py  pyproject.toml  ruff.toml
src/toggl/: main.py
