[project]
name = "toggl-tracker"
version = "1.0.0"
description = "Toggl Command Line Assistant"
readme = "README.md"
requires-python = ">=3.13"
repository = ""
dependencies = [
    "requests>=2.32.3",
    "simple-term-menu>=1.6.6",
]

[project.scripts]
toggl = "toggl.main:main"

[dependency-groups]
dev = [
    "ruff>=0.11.8",
]
